# agentrace-ai

./: .gitignore  LICENSE  README.md  pyproject.toml
agentrace/: __init__.py  attributes.py  config.py  context.py  decorators.py  metrics.py  session.py  tracer.py  utils.py
agentrace/exporters/: console.py  custom.py  otlp.py
agentrace/integrations/: anthropic_patch.py  langchain_cb.py  openai_patch.py
examples/: basic_usage.py  openai_example.py
tests/: test_core.py
